# Slotgame

./: .gitignore  CMakeLists.txt  GameSolver.cpp  Symbol.cpp  SymbolFactory.cpp  main.cpp
Headers/: Console.h  Game.h  GameSolver.h  HelperFunctions.h  Math.h  Symbol.h  SymbolFactory.h  WinInfo.h
Headers/GameEngine/: olcPixelGameEngine.h
Sources/: Console.cpp  Game.cpp  GameSolver.cpp  Symbol.cpp  SymbolFactory.cpp  WinInfo.cpp  main.cpp
